// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`将棋盤が初期化されているか 1`] = `
PieceBoard [
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "rook",
    },
    null,
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "bishop",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "bishop",
    },
    null,
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "rook",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
  ],
]
`;

exports[`将棋盤を文字列に変換・逆変換できるか 1`] = `"1,,,610-510-410-310-010-310-410-510-610,_-110-_-200-_-_-_-201-_,710-_-710-710-710-710-_-710-710,_-710-_-_-_-_-710-_-_,_-_-_-_-_-_-_-_-_,_-_-700-_-_-_-_-_-_,700-700-_-700-700-700-700-700-700,_-_-_-_-_-_-_-100-_,600-500-400-300-000-300-400-500-600"`;

exports[`将棋盤を表示できるか 1`] = `"(香)(桂)(銀)(金)(玉)(金)(銀)(桂)(香) 　 (飛) 　  角  　  　  　  馬  　 (歩) 　 (歩)(歩)(歩)(歩) 　 (歩)(歩) 　 (歩) 　  　  　  　 (歩) 　  　  　  　  　  　  　  　  　  　  　  　  　  歩  　  　  　  　  　  　  歩  歩  　  歩  歩  歩  歩  歩  歩  　  　  　  　  　  　  　  飛  　  香  桂  銀  金  王  金  銀  桂  香 "`;

exports[`正しく駒を動かせているか 1`] = `
PieceBoard [
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "lance",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "rook",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "bishop",
    },
    null,
    null,
    null,
    Piece {
      "isPromote": true,
      "owner": "black",
      "type": "bishop",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
  ],
  Array [
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "white",
      "type": "pawn",
    },
    null,
    null,
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "pawn",
    },
  ],
  Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "rook",
    },
    null,
  ],
  Array [
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "king",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "gold-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "silver-general",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "knight",
    },
    Piece {
      "isPromote": false,
      "owner": "black",
      "type": "lance",
    },
  ],
]
`;
